--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <div class="container">
         <h1 class="heading">Digital Clock</h1>
     <div class="timing">
-        <div class="hours">
-            <h1 class="hrs">00</h1>
-            <p class="hrs-txt">Hours</p>
+        <div class="clock">
+            <div class="hours">
+                <h1 class="hrs">00</h1>
+                <p class="hrs-txt">Hours</p>
+            </div>
+            <div class="minute">
+                <h1 class="min">00</h1>
+                <p class="min-txt">Minutes</p>     
+             </div>
+             <div class="second">
+                <h1 class="sec">00</h1>
+                <p class="sec-txt">Seconds</p> 
+             </div>  
         </div>
-        <div class="minute">
-            <h1 class="min">00</h1>
-            <p class="min-txt">Minutes</p>     
-         </div>
-         <div class="second">
-            <h1 class="sec">00</h1>
-            <p class="sec-txt">Seconds</p> 
-         </div>  
          <div class="Am-Pm">
             AM
          </div>
